--- a/css/styles.css
+++ b/css/styles.css
@@ -160,7 +160,8 @@ ul {
     margin-bottom: 15px;
 }
 
-.head-button {
+.open-modal-button,
+.send-form-button {
     color: #FFFFFF;
     background-color: #2196F3;
     font-weight: bold;
@@ -170,6 +171,15 @@ ul {
     cursor: pointer;
     padding: 10px 42px;
     margin-top: 15px;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+
+.send-form-button {
+    width: 200px;
+    padding: 10px auto;
+    align-self: center;
+    font-size: 16px;
+    line-height: 30px;
 }
 
 .backdrop {
@@ -197,6 +207,7 @@ ul {
                 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
     z-index: 1;
     transition: scale var(--standard-animation);
+    padding: 40px;
 }
 
 .close-modal-button {
@@ -224,6 +235,56 @@ ul {
     opacity: 0;
 }
 
+form {
+    display: flex;
+    flex-direction: column;
+    /* align-items: center; */
+}
+
+form>p {
+    letter-spacing: 0.6px;
+    font-size: 20px;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 12px;
+
+    /* color: #212121; */
+}
+
+.inputs-container {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: space-between; */
+}
+
+label {
+    font-size: 12px;
+    margin-bottom: 10px;
+}
+
+.basic-input,
+textarea {
+    width: 100%;
+    height: 40px;
+    margin-top: 4px;
+}
+
+textarea {
+    width: 100%;
+    min-height: 120px;
+    padding: 12px 16px;
+}
+
+.checbox-rules {
+    font-size: 14px;
+    letter-spacing: 0.42px;
+    align-self: center;
+    margin: 10px 0 15px;
+}
+
+.checbox-rules>a {
+    color: #2196F3;
+}
 
 /* SECTION 1 - LIST OF ARTICLES */
 .cards-list {
