--- a/css/styles.css
+++ b/css/styles.css
@@ -254,29 +254,82 @@ label {
     margin-bottom: 10px;
 }
 
-.basic-input,
-textarea {
+.basic-input {
     width: 100%;
+    height: 18px;
+    border: none;
+}
+.basic-input:focus {
+    border: none;
+    padding: 0;
+    outline: none;
+}
+
+.input-wraper {
+    display: flex;
+    border: 1px solid #212121;
+    border-radius: 4px;
+    border: 1px solid rgba(33, 33, 33, 0.20);
+    padding: 11px 12px;
     height: 40px;
     margin-top: 4px;
+    gap: 10px
+}
+.input-wraper:focus-within {
+    border: 1px solid #2196F3;
+    fill: #2196F3;
 }
 
 textarea {
     width: 100%;
     min-height: 120px;
     padding: 12px 16px;
+    border-radius: 4px;
+    margin-top: 4px;
+    outline: none;
+    resize: none;
+}
+textarea:focus-within {
+    border-color: #2196F3;
 }
 
-.checbox-rules {
+.rules-wraper {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-content: center;
     font-size: 14px;
-    letter-spacing: 0.42px;
-    align-self: center;
-    margin: 10px 0 15px;
+    gap: 4px;
+    padding: 20px 0 15px;
 }
 
-.checbox-rules>a {
+input[type="checkbox"] {
+    position: relative;
+    color: #fff;
+    appearance: none;
+    /* -moz-appearance: none;
+    -webkit-appearance: none; */
+}
+
+.check-icon {
+    fill: #FFFFFF;
+    padding: 1px;
+    border: 1.5px solid #212121;
+    border-radius: 3px;
+    position: absolute;
+    top: 20px;
+    left: 18px;
+}
+
+input[type="checkbox"]:checked + .check-icon {
+    background-color: #2196F3;
+    border: none;
+}
+
+.rules-wraper>a {
     color: #2196F3;
 }
+
 
 /* SECTION 1 - LIST OF ARTICLES */
 .cards-list {
@@ -365,6 +418,7 @@ textarea {
                 0px 1px 1px rgba(0, 0, 0, 0.14),
                 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+    transition: scale var(--standard-animation);
 }
 
 .our-team-card>img {
